syntax = "proto3";

package io.mystore.shipping.view;

import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "io/mystore/shipping/view/order_sku_item.proto";
import "io/mystore/shipping/entity/order_sku_item_entity.proto";

option java_outer_classname = "OrderSkuItemsNotShippedBySkuModel";

service OrderSkuItemsNotShippedBySku {
  option (kalix.codegen) = {
    view: {}
  };

  rpc GetOrderSkuItemsNotShippedBySku(GetOrderSkuItemsNotShippedBySkuRequest) returns (GetOrderSkuItemsNotShippedBySkuResponse) {
    option (kalix.method).view.query = {
      query: "SELECT * AS order_sku_items"
             "  FROM order_sku_items_not_shipped_by_sku OFFSET 0 LIMIT 100"
             " WHERE shipped_utc.seconds = 0"
             "   AND sku_id = :sku_id"
    };
    option (google.api.http) = {
      get: "/order-sku-items-not_shipped-by-sku"
    };
  }

  rpc OnOrderSkuItemCreated(entity.OrderSkuItemCreated) returns (OrderSkuItem) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (kalix.method).view.update = {
      table: "order_sku_items_not_shipped_by_sku"
      transform_updates: true
    };
  }

  rpc OnStockRequestedJoinToOrderAccepted(entity.StockRequestedJoinToOrderAccepted) returns (OrderSkuItem) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (kalix.method).view.update = {
      table: "order_sku_items_not_shipped_by_sku"
      transform_updates: true
    };
  }

  rpc OnStockRequestedJoinToOrderRejected(entity.StockRequestedJoinToOrderRejected) returns (OrderSkuItem) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (kalix.method).view.update = {
      table: "order_sku_items_not_shipped_by_sku"
      transform_updates: true
    };
  }

  rpc OnOrderRequestedJoinToStockAccepted(entity.OrderRequestedJoinToStockAccepted) returns (OrderSkuItem) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (kalix.method).view.update = {
      table: "order_sku_items_not_shipped_by_sku"
      transform_updates: true
    };
  }

  rpc OnOrderRequestedJoinToStockRejected(entity.OrderRequestedJoinToStockRejected) returns (OrderSkuItem) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (kalix.method).view.update = {
      table: "order_sku_items_not_shipped_by_sku"
      transform_updates: true
    };
  }

  rpc OnBackOrderedOrderSkuItem(entity.BackOrderedOrderSkuItem) returns (OrderSkuItem) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (kalix.method).view.update = {
      table: "order_sku_items_not_shipped_by_sku"
      transform_updates: true
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (OrderSkuItem) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (kalix.method).view.update = {
      table: "order_sku_items_not_shipped_by_sku"
      transform_updates: true
    };
  }
}

message GetOrderSkuItemsNotShippedBySkuRequest {
  string sku_id = 1;
}

message GetOrderSkuItemsNotShippedBySkuResponse {
  repeated OrderSkuItem order_sku_items = 1;
}
